discussion/kv_engine/165100/165100_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49348: Correct logical clock race in setting CAS

Currently two threads using the logical clock CAS mode can race and
use the same CAS value. This means that two different documents (as
we currently only call this while holding a HashBucketLock) for the
same vBucket can have the same CAS value.

Change-Id: Iea6a1b1e03eec55f6fa3b02ff0a694e7ea882ff6

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-11-04 16:28:07.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-04 16:53:48.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13810/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10: error: "folly/Portability/Gtest.h" file not found [clang-diagnostic-error]
#include <folly/Portability/Gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13810/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10:
error: "folly/Portability/Gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13810/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3444/ : FAILURE

Compile error at [2021-11-04T16:31:52.641Z] ../kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10:
fatal error: "folly/Portability/Gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3444/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15425/ : FAILURE

Compile error at [2021-11-04T16:38:19.574Z] ../kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10:
fatal error: folly/Portability/Gtest.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15425/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15708/ : FAILURE

Compile error at [2021-11-04T16:42:12.753Z] ../kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10:
fatal error: folly/Portability/Gtest.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15708/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16392/ : FAILURE

Compile error at [2021-11-04T16:33:24.320Z] ../kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10:
fatal error: "folly/Portability/Gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16392/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23763/ : FAILURE

Compile error at [2021-11-04T16:41:00.805Z] ../kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10:
fatal error: "folly/Portability/Gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23763/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3516/ : FAILURE

Compile error at [2021-11-04T16:40:07.279Z] ../kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10:
fatal error: folly/Portability/Gtest.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3516/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35292/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41564/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12611/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14587/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
